--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title><%= titel %></title>
 </head>
 <body>
     <%- include('partials/header') %>
     <%- include('partials/nav') %>
     <main>
-        <h1>Contact</h1>
+        <h1><%= titel %></h1>
         <section>Her er section 1</section>
         <section>Her er section 2</section>
         <section>Her er section 3</section>
